<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_nav_subjects"
        android:title="@string/nav_subjects" />
    <item
        android:id="@+id/navigation_focus"
        android:icon="@drawable/ic_nav_focus"
        android:title="@string/nav_focus" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_nav_progress"
        android:title="@string/nav_progress" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
